--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
+#370796 avoid repeated looping/indexing in apachesolr_index_nodes() by Damien Tournoud
 #369944 Add field aliases and further clean-up the query class, by pwolanin
 #366959 make usage of solrsort consistent in Solr_Base_Query::solrsort by Damien Tournoud
 #       Update errant watchdog calls that were using D5 signature by robertDouglass.
