--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,8 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
+#376966 by JacobSingh and pwolanin, requesting the top terms from luke is very
+        expensive, so normally request 0, and only get them for smaller indexes.
 #375991 by pwolanin, build spellcheck index on optimize
 #370707 by pwolanin, make sort field names consistent, make ignored multiValued
 #375723 by pwolanin, prevent fatal error if available facet list changes
