--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
+#378222 by janusman and pwolanin, add boost settings for "sticky" and "promote"
 #378566 by pwolanin, nodeaccess not correctly marking single nodes for re-indexing
 #378270 by pwolanin, suppress MLT admin link when there is no block content
 #378196 by pwolanin, remove PHP client from CVS
