--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
+#380538 by pwolanin, fix code to find vid for taxonomy facet blocks.
 
 Apache Solr integration 6.x-1.0-beta3, 2009-02-20
 ------------------------------
