update CHANGELOG for beta4

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,9 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
+
+Apache Solr integration 6.x-1.0-beta4, 2009-02-23
+------------------------------
 #380670 by pwolanin, only add a bq param for a node-type boost > 'Normal'.
 #379518 by pwolanin, correct mismatch in default boost between 
         solrconfig.xml and apachesolr_search.
