--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,10 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
+
+Apache Solr integration 6.x-1.0-beta5, xxxx-xx-xx
+------------------------------
+#385348 by moshe weitzman, use key in sort links array.
 #385362 by pwolanin, Shorten hash from 32 chars to 12.
 #383804 by JacobSingh, fix query building that broke nodeaccess.
 
