#305370 by pwolanin, don't delete from apachesolr table if Solr query fails.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,8 +9,9 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
 
-Apache Solr integration 6.x-1.0-beta5, xxxx-xx-xx
+Apache Solr integration 6.x-1.0-beta5, 2009-02-27
 ------------------------------
+#305370 by pwolanin, don't delete from apachesolr table if Solr query fails.
 #385348 by moshe weitzman, use key in sort links array.
 #385362 by pwolanin, Shorten hash from 32 chars to 12.
 #383804 by JacobSingh, fix query building that broke nodeaccess.
