--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,9 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
+#402984 by JacobSingh and pwolanin, put MLT menu under the general ApacheSolr settings
+#405722 by JacobSingh, increase ping timeout and make it variable
+#400882 by mkalkbrenner, fix faceting bug due to static counter in method add_field
 #382358 by pwolanin, use tokenizer solr.CharStreamAwareWhitespaceTokenizerFactory to fix highlighting.
 
 Apache Solr integration 6.x-1.0-beta5, 2009-02-27
