--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -11,6 +11,7 @@ Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-beta7, 2009-04-03
 ------------------------------
+#410330 by pwolanin and bhuga, return more information for error 0.
 #293989 by bjaspan and vladimir.dolgopolov, add date facets for created and changed dates. 
 #420290 by mkalkbrenner and pwolanin, add spaces around tags to avoid running words together.
 #368688 by hurleyit and pwolanin, send MLT docs instead of processed links to theme function.
