--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
+#254565 by drunken monkey and Scott Reynolds, change the query class to enable Views integration.
 
 Apache Solr integration 6.x-1.0-beta7, 2009-04-03
 ------------------------------
