#337737 by David Lesieur, mikejoconnor and Scott Reynolds, localize arg(1) dependence.         Changes query get_path() to facilitate generating facets outside the search page.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,8 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
+#337737 by David Lesieur, mikejoconnor and Scott Reynolds, localize arg(1) dependence.
+        Changes query get_path() to facilitate generate facets outside the search page.
 
 Apache Solr integration 6.x-1.0-beta8, 2009-04-16
 ------------------------------
