--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,7 +8,8 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
 ------------------------------
-#436074 by pwolanin, 
+#442198 by Scott Reynolds and pwolanin, update the Drupal_Solr_Query_Interface interface.
+#443252 by Scott Reynolds, (bugfix for regression) make protected id public again.
 #337737 by David Lesieur, mikejoconnor and Scott Reynolds, localize arg(1) dependence.
         Changes query get_path() to facilitate generating facets outside the search page.
 
