--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,8 +6,9 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 Apache Solr integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
 
-Apache Solr integration 6.x-1.0-xxxxx, xxxx-xx-xx
+Apache Solr integration 6.x-1.0-beta9, 2009-04-30
 ------------------------------
+#447622 by pwolanin and mkalkbrenner, better encoding of html entities and CCK facets.
 #447890 by pwolanin, properly respect 'access content' permission in _nodeaccess.
 #271753 by pwolanin, more granular CCK field mappings via _alter hook.
 #436074 by pwolanin, better query class handling of negative queries.
