--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-beta9, 2009-04-30
 ------------------------------
+#435924 by pwolanin, only clear cache on cron after updates and if the server is available.
 #405780 by blackdog and pwolanin, skip excluded node types during counting and indexing.
 #441628 by aufumy and pwolanin, update _og for negative facets, minor fixes, install/enable/update hooks.
 #447622 by pwolanin and mkalkbrenner, better encoding of html entities and CCK facets.
