--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, 2009-xx-xx
 ------------------------------
+#448298 by JacobSingh and pwolanin, use a confirm form for index deletion.
 #454352 by Damien Tournoud, make optimize interval configurable, document variables.
 
 Apache Solr integration 6.x-1.0-beta9, 2009-04-30
