--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxxxx, 2009-xx-xx
 ------------------------------
+#453338 by pwolanin and JacobSingh, move mlt functionality into the framework module.
 #365495 by pwolanin, improve admin screens and usability of field weights.
 #454608 by pwolanin, fix current search block.
 #453182 by pwolanin, use stored path rather than forcing node/$nid.
