update CHANGELOG - last beta release?

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,7 +6,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 Apache Solr integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
 
-Apache Solr integration 6.x-1.0-xxxxx, 2009-xx-xx
+Apache Solr integration 6.x-1.0-beta10, 2009-05-14
 ------------------------------
 #449414 by pwolanin, aufumy, & Scott Reynolds, refactor apachesolr_search_search().
 #462836 by pwolanin, catch fatal error in _nodeaccess if no solr.
