--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxx, xxxx-xx-xx
 ------------------------------
+#464758 by pwolanin, 4th param to htmlspecialchars breaks PHP < 5.2.3
 #466328 by pwolanin, fix classes for sort links.
 
 Apache Solr integration 6.x-1.0-beta10, 2009-05-14
