--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxx, xxxx-xx-xx
 ------------------------------
+#481838 by JacobSingh and pwolanin, enable plus sign in search when using clean URLs
 #480814 by mkalkbrenner and pwolanin, add more detail to logging on errors
 #464758 by pwolanin, 4th param to htmlspecialchars breaks PHP < 5.2.3
 #466328 by pwolanin, fix classes for sort links.
