--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxx, xxxx-xx-xx
 ------------------------------
+#489654 by JacobSingh, and pwolanin, allow users to set their index as "read only".
 
 Apache Solr integration 6.x-1.0-beta11, 2009-06-11
 ------------------------------
