--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxx, xxxx-xx-xx
 ------------------------------
+#453310 by pwolanin, allow easier theming of username display.
 #490076 by pwolanin, spellcheck more popular, maxqt to 20, limit search time.
 #358166 by David Lesieur, janusman, cptnCauliflower, and pwolanin, search for just facet(s).
 #489654 by JacobSingh, and pwolanin, allow users to set their index as "read only".
