--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,8 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxx, xxxx-xx-xx
 ------------------------------
+#463900 by pwolanin and JacobSingh, facet theme function clean-up.
+#405206 by pwolanin, allow Apache Solr to be the default, let core search index 0 nodes.
 #453310 by pwolanin, allow easier theming of username display.
 #490076 by pwolanin, spellcheck more popular, maxqt to 20, limit search time.
 #358166 by David Lesieur, janusman, cptnCauliflower, and pwolanin, search for just facet(s).
