--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxx, xxxx-xx-xx
 ------------------------------
+#505652 by bdurbin add apachesolr-showhide class to Show more link.
 #472600 by janusman, JacobSingh, and pwolanin, optionally hijack taxonomy pages.
 #496650 by mkalkbrenner, make unclick links work after #463900.
 #495258 comment out timeAllowed params (partial roll-back of #490076)
