--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-xxx, xxxx-xx-xx
 ------------------------------
+#299539 by kleung11 and pwolanin, use 'administer search' for permission checking.
 #503644 by pwolanin and Jeremy, make sure we strip ctrl chars last, add logging.
 #505652 by bdurbin, add apachesolr-showhide class to Show more link.
 #472600 by janusman, JacobSingh, and pwolanin, optionally hijack taxonomy pages.
