--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,11 @@
 Apache Solr integration x.x-x.x, xxxx-xx-xx
 ------------------------------
 
+Apache Solr integration 6.x-2.x, xxxx-xx-xx
+------------------------------
+#509526 by pwolanin, {apachesolr_search_node} table should be rebuilt when index is deleted.
+#457826 by janusman, robertDouglass - show browsable facet blocks in the search well when no search term is present to allow browsing. Hello 6.2 branch of ApacheSolr :D
+
 Apache Solr integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
 #508364 by pwolanin, Don't offer non-indexed fields as search options.
