--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#525918 by robertDouglass be more forceful when reindexing; rebuild the apachesolr_search_node table completely.
 #528516 by robertDouglass add apachesolr-facet and apachesolr-unclick CSS classes to unclick and facet links.
 #528484 by robertDouglass switch to Drupal.behaviors in apachesolr.js
 #515682 by robertDouglass, add confirmation form to re-index button.
