--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -12,6 +12,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 #509526 by pwolanin, {apachesolr_search_node} table should be rebuilt when index is deleted.
 #508364 by pwolanin, Don't offer non-indexed fields as search options.
 #508548 by pwolanin, Don't implode params['fq'] if it's not set.
+#528002 by janusman, Add RSS discovery to taxonomy hijack page
 
 Apache Solr integration 6.x-1.0-RC1, 2009-07-02
 ------------------------------
