--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#529606 by Damien Tournoud update schema.xml with WhitespaceTokenizerFactory and SnowballPorterFilterFactory. Note that you need to stop solr, replace schema.xml, delete your index, and re-index your site.
 #528002 by janusman, Add RSS discovery to taxonomy hijack page
 #528888 by robertDouglass turn spellchecker on by default
 #528596 part 1 by robertDouglass add JS enabled checkboxes to facet and unclick links
