--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#526344 by drunken monkey Remove apachesolr_read_only check from Drupal_ Apache_Solr_Service::_sendRawPost().
 #525980 by robertDouglass Clarify the API of apachesolr_index_updated.
 #530196 by pwolanin, fix facecount form function calls in apachesolr_og.
 #548102 by robertDouglass change wording on enabled filters page to improve usability.
