--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#545094 by loganfsmyth add getter and setter methods for a query's keys.
 #530910 by Damien Tournoud fix offset problem in field settings administration.
 #526344 by drunken monkey Remove apachesolr_read_only check from Drupal_ Apache_Solr_Service::_sendRawPost().
 #525980 by robertDouglass Clarify the API of apachesolr_index_updated.
