--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#502976 by Scott Reynolds followup to Other GET parameters ignored by Apache Solr Facet Blocks
 #473554 by janusman Add an "unclick" link to search keys
 #545094 by loganfsmyth add getter and setter methods for a query's keys.
 #530910 by Damien Tournoud fix offset problem in field settings administration.
