--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#551510 by Scott Reynolds Add in ability to theme different facet blocks differently.
 #551620 by robertDouglass Type dependent facet blocks.
 #549664 by Scott Reynolds Ignore node_access for Solr Views queries.
 #551582 by robertDouglass make CCK breadcrumbs, facets, and current search show the value, not the key.
