task #597174 by Frando: Make it easy to add custom sorts. Adding also CHANGELOG and README entries.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 5.x-2.x, 2009-09-22
 ------------------------------
+#597174 by Frando, add hook_apachesolr_prepare_query() to enable custom sorts.
 #551582 by claudiu.cristea Add callbacks to lookup values based on key for CCK fields.
 #590982 by swentel fix warnings on indexing.
 #584902 by cpliakas, robertDouglass, make $extra a keyed array and prevent PHP warnings.
