#657648 by kcoop: Added Add Smaller Limit Options to Apache Solr Cron Indexing.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#657648 by kcoop: Added Add Smaller Limit Options to Apache Solr Cron Indexing.
 
 Apache Solr integration 6.x-2.0-ALPHA1, 2009-12-26
 ------------------------------  
