updating CHANGELOG.txt

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,8 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#765486 by robertDouglass: Fixed Several cases where Luke cache not getting cleared and resulting in errors.
+#765448 by robertDouglass: Fixed Facet blocks for hierarchical taxonomy broken.
 #751420 by pwolanin, skwashd | Damien Tournoud, Scott Reynolds: Fixed apachesolr_site_hash() calls md5() twice.
 #750426 by mkalkbrenner, pwolanin | robertDouglass: Fixed fieldType textTight conficts with fieldType text and textSpell.
 
