New module: Apachesolr Text. This module is for use with the CCK Content Permissions module. It takes care of the indexing of text fields when anonymous users cannot see them, and searches on those text fields while respecting the role based access permissions set by the content_permissions module.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+NEW MODULE: ApacheSolr Text; takes care of text fields from CCK with content permissions.
 #704190 by pwolanin: Added Add page callbacks to display conf files in the index in reports.
 #878996 by pwolanin | weri: Added Don't break the loop .
 #373824 by pwolanin | David Stosik: Fixed Attachment count is not displayed in search results.
